crates/pg_syntax/tests/snapshots/postgres_regress/time@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS \"None\" FROM TIME_TBL WHERE f1 < '00:00';"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..19 "\"None\""
  Whitespace@19..20 " "
  From@20..24 "FROM"
  Whitespace@24..25 " "
  RangeVar@25..33
    Ident@25..33 "TIME_TBL"
  Whitespace@33..34 " "
  Where@34..39 "WHERE"
  Whitespace@39..40 " "
  AExpr@40..52
    ColumnRef@40..42
      Ident@40..42 "f1"
    Whitespace@42..43 " "
    Ascii60@43..44 "<"
    Whitespace@44..45 " "
    AConst@45..52
      Sconst@45..52 "'00:00'"
  Ascii59@52..53 ";"

