crates/pg_syntax/tests/snapshots/postgres_regress/time@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS \"Eight\" FROM TIME_TBL WHERE f1 >= '00:00';"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..20
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..20 "\"Eight\""
  Whitespace@20..21 " "
  From@21..25 "FROM"
  Whitespace@25..26 " "
  RangeVar@26..34
    Ident@26..34 "TIME_TBL"
  Whitespace@34..35 " "
  Where@35..40 "WHERE"
  Whitespace@40..41 " "
  AExpr@41..54
    ColumnRef@41..43
      Ident@41..43 "f1"
    Whitespace@43..44 " "
    GreaterEquals@44..46 ">="
    Whitespace@46..47 " "
    AConst@47..54
      Sconst@47..54 "'00:00'"
  Ascii59@54..55 ";"

