crates/pg_syntax/tests/snapshots/postgres_regress/time@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIME_TBL VALUES ('11:59 EDT');"
---
InsertStmt@0..42
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "TIME_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..40
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..40
      AConst@29..40
        Sconst@29..40 "'11:59 EDT'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

