crates/pg_syntax/tests/snapshots/postgres_regress/time@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIME_TBL VALUES ('12:01');"
---
InsertStmt@0..38
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "TIME_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..36
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..36
      AConst@29..36
        Sconst@29..36 "'12:01'"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

