crates/pg_syntax/tests/snapshots/postgres_regress/time@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIME_TBL VALUES ('11:59:59.99 PM');"
---
InsertStmt@0..47
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "TIME_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..45
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..45
      AConst@29..45
        Sconst@29..45 "'11:59:59.99 PM'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

