crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM TIMESTAMP_TBL;
---
DeleteStmt@0..26
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Ascii59@25..26 ";"

